--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,5 @@ spring.jpa.hibernate.ddl-auto=update
 # spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.thymeleaf.cache=false
+server.servlet.session.cookie.same-site=none
+server.servlet.session.cookie.secure=true
