--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,13 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<!-- ADD PostgreSQL driver -->
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.7.3</version> <!-- Or latest -->
+		</dependency>
 	</dependencies>
 
 	<build>
