--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,15 +4,23 @@ spring.application.name=egglectricity
 # spring.datasource.url=${DB_URL_LOCAL:jdbc:mysql://localhost:3307/egglectricity?allowPublicKeyRetrieval=true&useSSL=false&useTimezone=true&serverTimezone=GMT&characterEncoding=UTF-8}
 
 # For deploy
-spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}?allowPublicKeyRetrieval=true&useSSL=false&useTimezone=true&serverTimezone=GMT&characterEncoding=UTF-8
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASSWORD}
+# spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}?allowPublicKeyRetrieval=true&useSSL=false&useTimezone=true&serverTimezone=GMT&characterEncoding=UTF-8
+# spring.datasource.username=${DB_USER}
+# spring.datasource.password=${DB_PASSWORD}
+# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# For Supabase
+spring.datasource.url=jdbc:postgresql://db.dadsrjsqpsrbljukopxv.supabase.co:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=postgresdbpassword
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 # spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.thymeleaf.cache=false
-server.servlet.session.cookie.same-site=none
-server.servlet.session.cookie.secure=true
+#server.servlet.session.cookie.same-site=none
+#server.servlet.session.cookie.secure=true
