make mvnw executable

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -43,5 +43,8 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
+      - name: Make mvnw executable
+        run: chmod +x ./mvnw
+
       - name: Build and test
         run: ./mvnw test
