azure deployment workflow test

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,9 +11,10 @@ spring.application.name=egglectricity
 
 
 # For Supabase
-spring.datasource.url=jdbc:postgresql://db.dadsrjsqpsrbljukopxv.supabase.co:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=postgresdbpassword
+
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
