--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -28,7 +28,6 @@ jobs:
       SPRING_DATASOURCE_URL: jdbc:postgresql://localhost:5432/testdb
       SPRING_DATASOURCE_USERNAME: testuser
       SPRING_DATASOURCE_PASSWORD: testpass
-      SPRING_JPA_HIBERNATE_DDL_AUTO: update
 
     steps:
       - name: test pg connection
@@ -48,3 +47,30 @@ jobs:
 
       - name: Build and test
         run: ./mvnw test
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: test  # deploy only if tests pass
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+
+      - name: Make mvnw executable
+        run: chmod +x ./mvnw
+
+      - name: Build app
+        run: ./mvnw clean package -DskipTests
+
+      - name: Deploy to Azure Web App
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: egglectricity
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+          package: target/*.jar
