--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.thymeleaf.cache=false
 #server.servlet.session.cookie.same-site=none
 #server.servlet.session.cookie.secure=true
+
+# Connection Retry
+spring.datasource.hikari.connection-timeout=20000
+spring.datasource.hikari.maximum-pool-size=5
+spring.datasource.hikari.minimum-idle=1
+spring.datasource.hikari.initialization-fail-timeout=10000
+spring.datasource.hikari.validation-timeout=5000
